--- a/.github/flutter_build.yml
+++ b/.github/flutter_build.yml
@@ -2,9 +2,9 @@ name: Flutter Test
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "main" ]
 
 jobs:
   build:
