--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_token_auth
 description: A package for handling token-based authentication in Flutter.
 version: 0.1.0
-# repository: https://github.com/my_org/my_repo
+repository: https://github.com/diarmuidr3d/flutter_token_auth
 
 environment:
   sdk: ^3.8.1
